fix: 수정 불가능한 List를 수정 시도하는 오류 수정